# memory-parasite-protocol

./: .dockerignore  .env.example  .gitignore  .replit  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  check_db_status.py  check_infections.py  check_logs.py  clodds_responses.json  colosseum_engage.py  colosseum_heartbeat.py  deploy_koyeb.py  discover_api.py  forum.json  full_koyeb_logs.txt  fund_wallet.py  koyeb.yaml  main.py  master_orch.py  netlify.toml  netlify.toml.bak  own_responses.json  package-lock.json  package.json  project.json  requirements.txt  setup.sh  sidex_responses.json  skill.md  test_agent_cycle.py  test_ollama.py  test_round.py  test_round_v2.py  trial_record.py
.mpp-status/: test.txt
agents/: __init__.py  autonomous_agent.py  base_agent.py  defi_agent.py  dex_agent.py  nft_agent.py  red_team_agent.py
api/: __init__.py  routes.py  server.py
blockchain/: __init__.py  infection_ledger.py  integration.py  solana_client.py
blockchain/program/: Anchor.toml  Cargo.toml  lib.rs
blockchain/program/programs/memory_parasite_ledger/: Cargo.toml
blockchain/program/programs/memory_parasite_ledger/src/: lib.rs
client-lib/: README.md  index.js  package.json
config/: __init__.py  reasoning_config.yaml  settings.py
core/: __init__.py  collective_memory.py  emergence.py  infection.py  mutation.py  network.py  reasoning.py  recruitment.py  safety.py  utils.py
dashboard/: app.py  data.py  requirements.txt
database/: __init__.py  client.py  models.py  schema.sql  schema_simple.sql
deploy/: DEPLOYMENT_GUIDE.md
docs/: api-reference.md  (+8 more)
(+87 files in other folders)
