[package]
name = "memory-parasite-ledger"
version = "0.1.0"
description = "On-chain infection ledger for Memory Parasite Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memory_parasite_ledger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"
